--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,12 @@
 {
   "compilerOptions": {
+    "target": "es5",
     "module": "commonjs",
     "esModuleInterop": true,
-    "target": "es6",
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "noImplicitAny": true,
-    "moduleResolution": "node",
-    "sourceMap": true,
-    "outDir": "dist",
-    "baseUrl": "./src",
-    "typeRoots": [ "./types", "./node_modules/@types"],
-    "paths": {
-      "*": [
-        "node_modules/*"
-      ]
-    }
+    "declaration": true,
+    "outDir": "./lib",
+    "strict": true
   },
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src"],
+  "exclude": ["node_modules", "**/__tests__/*"]
 }
