--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pilar-server",
-  "version": "1.0.2",
+  "version": "1.0.5",
   "description": "A rest route framework based on express",
   "main": "lib/index.js",
   "license": "MIT",
@@ -18,15 +18,13 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
-    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.5",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.1",
